Wed Feb 28 00:25:42 2001  Darrell Brunsch <brunsch@uci.edu>

        * bin/auto_run_tests.lst:

          The examples/POA/Adapter_Activator/run_test.pl test was being run
          twice.  In fairness to all the other tests that only get to run once,
          I removed the second instance.  

Tue Feb 27 17:31:48 2001  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_hpux_aCC.GNU: Turn on -D_REENTRANT for
          the threads=0 build - this enables the reentrant functions which
          are present, threads or not. It does not turn on threads, which
          are instead enabled by -D_POSIX_C_SOURCE=199506L.

        * ace/config-hpux-11.00.h: Added ACE_HAS_2_PARAM_ASCTIME_R_AND_CTIME_R

        * ace/OS.i (rand_r): Added 'defined (HPUX_11)' to the ways to get to
          the POSIX.1c-conformant version of rand_r. Allows clean compile
          on HP-UX 11 without thread support.
          Also lined up some misaligned #if/else/endif lines to make it
          easier to find one's way through.

        * ace/OS_Dirent.inl (readdir_r): Added 'defined (HPUX_11)' to the
          ways to get the POSIX.1c-conformant version of readdir_r. Allows
          clean compile on HP-UX 11 without thread support.

Tue Feb 27 11:38:38 2001  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* performance-tests/TCP/tcp_test.cpp (main): Zapped the
	  non-existent '-f' option.  Thanks to Mike Curtis for reporting
 	  this.
  
  	* performance-tests/TCP/tcp_test.cpp (main): Check for improper
	  bufsz.  Thanks to Mike Curtis for reporting this.

  	* performance-tests/TCP/tcp_test.cpp (main): Documented the '-t'
	  option, which specifies the number of threads.  

	* performance-tests/TCP/README: Fixed a typo.  Thanks to 
	  Mike Curtis for reporting this.


Tue Feb 27 10:51:18 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the AMI tests to the daily
	  builds. 
