@@ -1,0 +1,94 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+  <!-- $Id$ -->
+  <head>
+    <title>Setting Up A Bugzilla Nightly Build</title>
+  </head>
+
+  <body text = "#000000" link="#000fff" vlink="#ff0f0f" bgcolor="#ffffff">
+    <h1>Setting Up A Bugzilla Nightly Build</h1>
+
+    <p>
+      The
+      <a href="http://www.cs.wustl.edu/~schmidt/doc-center.html">
+	Center for Distributed Object Computing</a> has automated
+      daily builds to keep track of the progress made each day for
+      selected software and hardware platforms.
+
+    <p>
+      Below are the steps to take to add a platform to the current
+      platforms included in the daily builds. BUILD_NAME should be
+      replaced with the name you want to give the build (e.g.,
+      Solaris8_gcc). It can be helpful to embed the OS and the compiler
+      used in BUILD_NAME as in the example in the previous sentence
+      (i.e., Solaris8_gcc =>
+      the Solaris 8 operating system and GNU's gcc/g++ compiler).
+
+    <UL>
+    <LI>Configure CVSROOT as it will be used in the build
+<PRE>
+    $ cvs checkout ACE_wrappers
+
+    $ cd ACE_wrappers
+    $ mkdir build build/BUILD_NAME
+    $ ./bin/create_ace_build -a build/BUILD_NAME
+    $ mkdir build/BUILD_NAME/auto_compile
+    $ touch build/BUILD_NAME/auto_compile/history
+</PRE>
+
+    <LI>Configure build/BUILD_NAME/ace/config.h.
+    (Solaris 8 is used here as an example.)
+<PRE>
+    $ echo '#include "ace/config-sunos5.8.h" > build/BUILD_NAME/ace/config.h
+</PRE>
+
+    <LI>Configure build/BUILD_NAME/include/makeinclude/platform_macros.GNU
+    Solaris 8 and GNU compiler is used here as an example. This example
+    also shows building without debug.
+<PRE>
+    $ cd build/BUILD_NAME/include/makeinclude
+    $ echo 'include $(ACE_ROOT)/include/makeinclude/platform_sunos5_g++.GNU' > platform_macros.GNU
+    $ echo 'debug=0' >> platform_macros.GNU
+</PRE>
+
+    <LI>Setup build script in ~bugzilla/bin.
+    (Copy an existing build script to use as a template. Solaris 8 and GNU compiler is used here as an example.)
+<PRE>
+    $ su bugzilla
+    $ cd ~/bin
+    $ cp auto_compile_sunos_gcc272 auto_compile_sunos8_gcc
+</PRE>
+    Modify the new auto compile file as needed. At a minimum, CHECKOUT and
+    BUILD will need to be modified.<BR><BR>
+
+    <LI>Create a cron job to run the build.
+    (Decide which machine the build should be done. Add a cron job to bugzilla's crontab.)
+<PRE>
+    $ ssh -l bugzilla <i>machine_of_choice</i>
+    $ crontab -e
+    <i>Add cron job to kick off the build every day.</i>
+</PRE>
+
+    <LI>After the build has been running successfully a few days (not
+    necessarily that there aren't errors or warnings in the compilation or
+    execution) incorporate build into Web scoreboard by modifying builds.lst
+    and showlog.cgi files.
+<PRE>
+    $ cd $ACE_wrappers/bin/nightlybuilds
+    $ vi builds.lst  # to include the build you're making
+    $ cd ~bugzilla/.www-docs/cgi-bin
+    $ vi showlog.cgi # to include the build you're making
+</PRE>
+    Modify the new auto compile file as needed. At a minimum, CHECKOUT and
+    BUILD will need to be modified.
+    </UL>
+
+    <hr>
+    <address><a href="mailto:joeh@cs.wustl.edu">Joe Hoffert</a></address>
+<!-- Created: Thu Feb 22 10:15:58 CST 2001 -->
+<!-- hhmts start -->
+Last modified: Wed Feb 28 15:32:45 CST 2001
+<!-- hhmts end -->
+    <br>
+  </body>
+</html>
